# openclaw

./: .gitignore  .vercelignore  CONTRIBUTING.md  LICENSE  README.md  avengers_hq.html  avengers_hq_unified.html  avengers_rimworld.html  command_center.html  dashboard.html  index.html  main.py  mobile.html  openclaw_command.html  openclaw_journal.html  pyproject.toml  railway.json  requirements.txt  vercel.json
.claude/: launch.json  settings.json
.github/workflows/: deploy-pages.yml
agents/: README.md  __init__.py  agent_api.py  ant_man.py  black_widow.py  captain_america.py  correlation_tracker.py  desk_chief.py  doctor_strange.py  etsy_api.py  fundamental_analyst.py  hawkeye.py  hulk.py  ict_pipeline.py  iron_man.py  nick_fury.py  pdf_generator.py  scarlet_witch.py  sentiment_analyst.py  spider_man.py  technical_analyst.py  thor.py  trade_ideas.py  vision.py  war_machine.py
configs/: config.yaml
market-data-service/: .env.example  Dockerfile  docker-start.sh  package-lock.json  package.json
n8n_workflows/: INDEX.md  INTEGRATION_GUIDE.md  README.md  backtester_agent.json  news_scanner_agent.json  performance_reporter_agent.json  strategy_optimizer_agent.json  tradingview_signal_alerter.json
pine_scripts/: openclaw_base.pine  openclaw_forex.pine  openclaw_futures.pine  openclaw_price_feed.pine  openclaw_scalper_v2.pine  openclaw_signal_forge.pine
simworld/: .env.production  README.md  TODO.md  index.html  package-lock.json  package.json
src/: data_loader.py  indicators.py  risk.py  scalper.py  sessions.py  utils.py  walkforward.py
tradingview/: SETUP_GUIDE.md  openclaw_ict_v6.pine  webhook_alert_template.pine
(+54 files in other folders)
