[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw"
version = "1.0.0"
description = "Open-source market analyst bot with Avengers-themed AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "JJ", email = "javonte.platt@gmail.com" },
]
keywords = ["trading", "forex", "crypto", "market-analysis", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "yfinance>=0.2.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.28",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=20.0"]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
]

[project.scripts]
openclaw = "agents.nick_fury:main"

[project.urls]
Homepage = "https://github.com/jj/openclaw"
Issues = "https://github.com/jj/openclaw/issues"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
